made sure "average" was initialized to zero change the setting of the font from mFixedFont to mFont for textfields b=18232,32254 r=sfraserfor 18232, self for 32254